added bruno collection and refactor the code a bit