@@ -1,8 +1,8 @@
 package com.autoecole.service.impl;
 
-import com.autoecole.dto.AddApplicationFileRequestDTO;
-import com.autoecole.dto.ApplicationFileCloseResponseDTO;
-import com.autoecole.dto.ApplicationFileDTO;
+import com.autoecole.dto.request.AddApplicationFileRequestDTO;
+import com.autoecole.dto.response.ApplicationFileCloseResponseDTO;
+import com.autoecole.dto.response.ApplicationFileDTO;
 import com.autoecole.enums.*;
 import com.autoecole.exception.ApplicationFileException;
 import com.autoecole.exception.NotFoundException;
@@ -17,9 +17,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -34,70 +32,42 @@ public class ApplicationFileServiceImpl implements ApplicationFileService {
 
     @Override
     public ApplicationFileDTO saveApplicationFile(String candidateCin, AddApplicationFileRequestDTO request) {
-        // 1. Validate candidate exists
+
         Candidate candidate = candidateService.findByCin(candidateCin);
-        if (candidate == null) {
-            throw new ApplicationFileException(100, "Candidate not found");
-        }
 
-        // 2. Validate category exists
         Category category = categoryService.findByCode(request.getCategoryCode());
-        if (category == null) {
-            throw new ApplicationFileException(101, "Category not found");
-        }
 
-        // 3. Check for active application file for this category
+        // Check for an active application file for this category
         ApplicationFile existingActiveFile = applicationFileDao.findByCandidateAndCategory(candidate, category);
         if (existingActiveFile != null && existingActiveFile.getIsActive() &&
                 existingActiveFile.getStatus() == ApplicationFileStatus.IN_PROGRESS) {
-            throw new ApplicationFileException(102, "Cannot add application file: An active application file is already in progress for this category");
+            throw new ApplicationFileException(100, "Cannot add application file: An active application file is already in progress for this category");
         }
 
-        // 4. Check for completed application file for this category
+        // Check for a completed application file for this category
         if (existingActiveFile != null && existingActiveFile.getStatus() == ApplicationFileStatus.COMPLETED) {
-            throw new ApplicationFileException(103, "Cannot add application file: A completed application file already exists for this category");
+            throw new ApplicationFileException(101, "Cannot add application file: A completed application file already exists for this category");
         }
 
-        // 5. Generate file number
+        // Generate file number
         String fileNumber = "test-" + candidateCin + "-test";
 
-        // 6. Create new application file
-        ApplicationFile newApplicationFile = ApplicationFile.builder()
-                .candidate(candidate)
-                .category(category)
-                .practicalHoursCompleted(0.0)
-                .theoreticalHoursCompleted(0.0)
-                .isActive(true)
-                .startingDate(LocalDate.now())
-                .status(ApplicationFileStatus.IN_PROGRESS)
-                .fileNumber(fileNumber)
-                .taxStamp(TaxStampStatus.NOT_PAID)
-                .medicalVisit(MedicalVisitStatus.NOT_REQUESTED)
-                .build();
+        // Create a new application file
+        ApplicationFile savedApplicationFile = applicationFileDao.save(
+                ApplicationFile.createNew(candidate, category, fileNumber)
+        );
 
-        ApplicationFile savedApplicationFile = applicationFileDao.save(newApplicationFile);
+        // Create payment record
+        Payment savedPayment = paymentDao.save(
+                Payment.createNew(savedApplicationFile, request.getTotalAmount())
+        );
 
-        // 7. Create payment record
-        Payment payment = Payment.builder()
-                .applicationFile(savedApplicationFile)
-                .paidAmount(0)
-                .status(PaymentStatus.PENDING)
-                .totalAmount(request.getTotalAmount())
-                .build();
+        // Create initial payment installment
+        paymentInstallmentDao.save(
+                PaymentInstallment.createInitial(savedPayment, request.getInitialAmount())
+        );
 
-        Payment savedPayment = paymentDao.save(payment);
-
-        // 8. Create initial payment installment
-        PaymentInstallment initialInstallment = PaymentInstallment.builder()
-                .payment(savedPayment)
-                .amount(request.getInitialAmount())
-                .date(LocalDate.now())
-                .installmentNumber(1)
-                .build();
-
-        paymentInstallmentDao.save(initialInstallment);
-
-        // 9. Update payment with new paid amount and status
+        // Update payment with new paid amount and status
         savedPayment.setPaidAmount(request.getInitialAmount());
         if (request.getInitialAmount() >= savedPayment.getTotalAmount()) {
             savedPayment.setStatus(PaymentStatus.COMPLETED);
@@ -106,9 +76,11 @@ public class ApplicationFileServiceImpl implements ApplicationFileService {
         }
         paymentDao.save(savedPayment);
 
-        // 10. Activate the candidate
-        candidate.setIsActive(true);
-        candidateService.saveCandidate(candidate);
+        // Activate the candidate
+        if(Boolean.FALSE.equals(candidate.getIsActive())) {
+            candidate.setIsActive(true);
+            candidateService.updateCandidate(candidate.getCin(), candidate);
+        }
 
         return ApplicationFileDTO.fromEntity(savedApplicationFile);
     }
@@ -161,22 +133,22 @@ public class ApplicationFileServiceImpl implements ApplicationFileService {
         List<ApplicationFile> applicationFiles = applicationFileDao.findByCandidate(candidate);
         return applicationFiles.stream()
                 .map(ApplicationFileDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public void cancelApplicationFile(Long applicationFileId) {
-        // 1. Find application file
+        // 1. Find an application file
         ApplicationFile applicationFile = findById(applicationFileId);
 
         // 2. Check if already completed (cannot cancel)
         if (applicationFile.getStatus() == ApplicationFileStatus.COMPLETED) {
-            throw new ApplicationFileException(105, "Cannot cancel a completed application file");
+            throw new ApplicationFileException(102, "Cannot cancel a completed application file");
         }
 
-        // 3. Check if already cancelled
+        // 3. Check if already canceled
         if (applicationFile.getStatus() == ApplicationFileStatus.CANCELLED) {
-            throw new ApplicationFileException(106, "Application file is already cancelled");
+            throw new ApplicationFileException(103, "Application file is already cancelled");
         }
 
         // 4. Update application file status
@@ -187,7 +159,7 @@ public class ApplicationFileServiceImpl implements ApplicationFileService {
         // 5. Cancel all scheduled exams
         cancelScheduledExams(applicationFile);
 
-        // 6. Check if candidate has other active application files
+        // 6. Check if a candidate has other active application files
         deactivateCandidateIfNoActiveFiles(applicationFile);
     }
 
@@ -239,72 +211,12 @@ public class ApplicationFileServiceImpl implements ApplicationFileService {
         applicationFileDao.save(applicationFile);
     }
 
-    @Override
-    public ApplicationFileCloseResponseDTO closeApplicationFile(Long applicationFileId) {
-        // 1. Find application file
-        ApplicationFile applicationFile = findById(applicationFileId);
-
-        // 2. Check if already completed or cancelled
-        if (applicationFile.getStatus() == ApplicationFileStatus.COMPLETED) {
-            throw new ApplicationFileException(108, "Application file is already completed");
-        }
-
-        if (applicationFile.getStatus() == ApplicationFileStatus.CANCELLED) {
-            throw new ApplicationFileException(109, "Application file is already cancelled");
-        }
-
-        // 3. Check if eligible for completion
-        boolean isEligible = isEligibleForCompletion(applicationFileId);
-
-        if (isEligible) {
-            // Mark as COMPLETED
-            applicationFile.setStatus(ApplicationFileStatus.COMPLETED);
-            applicationFile.setIsActive(false);
-            applicationFileDao.save(applicationFile);
-
-            // Check if candidate has other active application files
-            deactivateCandidateIfNoActiveFiles(applicationFile);
-
-            return ApplicationFileCloseResponseDTO.completed();
-        } else {
-            // Mark as CANCELLED
-            applicationFile.setStatus(ApplicationFileStatus.CANCELLED);
-            applicationFile.setIsActive(false);
-
-            // Cancel all scheduled exams
-            cancelScheduledExams(applicationFile);
-
-            applicationFileDao.save(applicationFile);
-
-            // Check if candidate has other active application files
-            deactivateCandidateIfNoActiveFiles(applicationFile);
-
-            return ApplicationFileCloseResponseDTO.cancelled(
-                    "Both theory and practical exams must be passed to complete the application file");
-        }
-    }
-
-    @Override
-    public boolean isEligibleForCompletion(Long applicationFileId) {
-        ApplicationFile applicationFile = findById(applicationFileId);
-        List<Exam> exams = applicationFile.getExams();
-
-        // Check if both theory and practical exams are passed
-        boolean theoryPassed = exams.stream()
-                .anyMatch(e -> e.getExamType() == ExamType.THEORY && e.getStatus() == ExamStatus.PASSED);
-
-        boolean practicalPassed = exams.stream()
-                .anyMatch(e -> e.getExamType() == ExamType.PRACTICAL && e.getStatus() == ExamStatus.PASSED);
-
-        return theoryPassed && practicalPassed;
-    }
-
     // ==================== PRIVATE HELPER METHODS ====================
 
     private void cancelScheduledExams(ApplicationFile applicationFile) {
         List<Exam> scheduledExams = applicationFile.getExams().stream()
                 .filter(exam -> exam.getStatus() == ExamStatus.SCHEDULED)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Exam exam : scheduledExams) {
             exam.setStatus(ExamStatus.FAILED);
@@ -318,7 +230,7 @@ public class ApplicationFileServiceImpl implements ApplicationFileService {
 
         if (!hasOtherActiveFiles) {
             candidate.setIsActive(false);
-            candidateService.saveCandidate(candidate);
+            candidateService.updateCandidate(candidate.getCin(), candidate);
         }
     }
 }
